--- a/login.html
+++ b/login.html
@@ -126,7 +126,7 @@
               <h3>Login Here</h3>
       
               <label for="username">Email</label>
-              <input type="email" placeholder="Email" id="inputField">
+              <input type="email" placeholder="email" id="inputField">
       
               <label for="password">Password</label>
               <input type="password" placeholder="Password" id="inputField">
